--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <p style="color: darkgrey;">A silent screen beside you</p>
+<!--               <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#" target="_blank">Home</a>
+              </li> -->
+            
+<!--               OpenAI -->
+<!--             <form class="d-flex mt-3" role="search">
+              <input class="form-control me-2" type="search" placeholder="Please describe the image you want to create" aria-label="Search">
+              <button class="btn btn-success" type="submit">Search</button>
+              <button class="btn btn-success" type="button" onclick="genImg()">Create</button>
+            </form>
+              <br> -->
+              
               <li class="nav-item dropdown">
                 <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Contact</a>
                 <ul class="dropdown-menu dropdown-menu-dark">
