--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Contact</a>
                 <ul class="dropdown-menu dropdown-menu-dark">
-                  <li><a class="dropdown-item" href="#"><i class="fa fa-globe" style="font-size:18px"></i>&nbsp;&nbsp;cyr& official (TBD)</a></li>
+                  <li><a class="dropdown-item" href="#"><i class="fa fa-globe" style="font-size:18px"></i>&nbsp;&nbsp;cy& official (TBD)</a></li>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
