add: href="mailto:~"
mailto 추가

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   </li>
                   <li><a class="dropdown-item" href="https://github.com/chnyl" target="_blank"><i class="fa fa-github" style="font-size:18px"></i>&nbsp;&nbsp;Github</a></li>
                   <li><a class="dropdown-item" href="https://www.linkedin.com/in/chanyeol-ryu-5a6964243/" target="_blank"><i class="fa fa-linkedin" style="font-size:18px"></i>&nbsp;&nbsp;Linked-In</a></li>
-                  <li><a class="dropdown-item" href="#"><i class="fa fa-envelope-o" style="font-size:18px"></i>&nbsp;&nbsp;chanyeol.ryu@samsung.com</a></li>
+                  <li><a class="dropdown-item" href="mailto: ycy0831@naver.com?cc=chanyeol.ryu@samsung.com"><i class="fa fa-envelope-o" style="font-size:18px"></i>&nbsp;&nbsp;Email</a></li>
                 </ul>
                   <p style="font-family: Arial; color: darkgrey; position: fixed; bottom: 1%;">Press<kbd>F11</kbd>for full screen</p>
               </li>
